Next release
============

- #34: Don't recreate ``jinja2.Environment`` for ``add_jinja2_extension``
  [Domen Kožar]

- Drop Python 2.5 compatibility
  [Domen Kožar]

- Addition of ``static_url`` filter.

- Add ``dev`` and ``docs`` setup.py aliases (ala Pyramid).

- Changed template loading relative to package calling the renderer so 
  it works like the Chameleon template loader.

1.3 (2011-12-14)
================

- Make scaffolding compatible with Pyramid 1.3a2+.

1.2 (2011-09-27)
================

- Make tests pass on Pyramid 1.2dev.

- Make compatible with Python 3.2 (requires Pyramid 1.3dev+).

1.1 (2011-07-24)
================

- Add ``get_jinja2_environment`` directive.

- Add all configurator directives to documentation.

1.0 (2011-05-12)
================

- Message domain can now be specified with *jinja2.i18n.domain* for i18n

- Paster template now sets up starter locale pot/po/mo files

- pyramid_jinja2 now depends on Jinja2 >= 2.5.0 due to
  ``jinja2.Environment.install_gettext_callables`` use
  https://github.com/Pylons/pyramid_jinja2/pull/21

- Added demo app just to visualize i18n work

0.6.2 (2011-04-06)
==================

- ``jinja2.ext.i18n`` is now added by default, see ``i18n.rst``
  for details

- Added ``add_jinja2_extension`` directive to the Configurator

- Updated jinja2.extensions parsing mechanism

- Fixed docs to indicate using asset: prefix is no longer necessary

0.6.1 (2011-03-03)
==================

- Asset-based loading now takes precedance and does not require
  "asset:" prefix

- Fixed the "current" package mechanism of asset: loading so that
  it more accurately finds the current package

- Dependency on ``pyramid_zcml`` removed.

0.6 (2011-02-15)
================

- Documentation overhauled.

- Templates can now be looked up by asset spec completely bypassing
  the search path by specifying a prefix of ``asset:``.

- Updated paster template to more closely relate to changes made
  to paster templmates in Pyramid core.
